feat/add ServiceSignatureValidator config to handle other services internal requests on authenticator service